# PlagLens

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  design-system.md  endpoint-coverage.md  integration-smoke.md  package-lock.json  pyproject.toml  readiness.md  redesign-verification.md  route-audit.md  ui-audit.md
libs/plaglens-common/: README.md  pyproject.toml
libs/plaglens-common/src/plaglens_common/: __init__.py  auth.py  errors.py  events.py  headers.py  health.py  idempotency.py  logging.py  metrics.py  observability.py  operation.py  pagination.py  problem.py  rbac.py  secrets.py  service_client.py  service_token.py  tracing.py
libs/plaglens-common/tests/: conftest.py  test_auth.py  test_errors.py  test_events.py  test_headers.py  test_health.py  test_idempotency.py  test_logging.py  test_metrics.py  test_operation.py  test_pagination.py  test_problem.py  test_rbac.py  test_secrets.py  test_service_client.py  test_tracing.py
services/ai-analysis/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/ai-analysis/alembic/: env.py
services/ai-analysis/alembic/versions/: 0001_initial.py  0002_provider_api_key_env_var.py  0003_provider_owner_user_id.py
services/ai-analysis/tests/: conftest.py  test_admin.py  test_analyses.py  test_consumer.py  test_health.py  test_openai_client.py  test_orchestrator.py  test_vault_key.py
services/audit/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/audit/tests/: test_admin_endpoints.py  test_health.py  test_internal_write.py  test_kafka_ingest.py  test_retention_legal_hold.py  test_search.py
services/course/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/course-submission/: Dockerfile  course_alembic.ini  entrypoint.sh  pyproject.toml  submission_alembic.ini
services/course-submission/course_alembic/: env.py
services/course-submission/submission_alembic/: env.py
services/course-submission/tests/: conftest.py  test_app_assembly.py  test_inprocess_course_client.py  test_lifespan_wiring.py
services/course-submission/tests_course/: conftest.py  test_courses.py  test_groups.py  test_homeworks.py  test_invitations.py  test_members.py
services/course-submission/tests_submission/: test_dedup.py  test_submissions.py
services/course/tests/: conftest.py  test_assignments.py  test_courses.py  test_homeworks.py
services/gateway/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/gateway/config/: gateway.yaml
services/gateway/tests/: conftest.py  test_circuit_breaker.py  test_cors_and_health.py  test_idempotency.py  test_jwt_auth.py  test_operations_dispatcher.py  test_rate_limit.py  test_routing_proxy.py  test_system_endpoints.py
services/identity/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/identity/alembic/: env.py
services/identity/tests/: conftest.py  test_auth.py  test_health.py  test_me.py  test_oauth_flow.py  test_telegram_binding.py  test_tenants.py  test_users.py
services/integration/: .env.example  AUTOSYNC.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/integration/alembic/: env.py
services/integration/tests/: conftest.py  test_adapters_unit.py  test_configs_crud.py  test_cursor_admin.py  test_google_sheets.py  test_health.py  test_imports_service.py  test_kafka_consumer.py  test_manual_upload.py  test_oauth.py  test_schedules.py  test_stepik_endpoints.py  test_sync_jobs.py  test_telegram_binding.py  test_webhooks.py  test_yandex_contest.py
services/notification/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/notification/alembic/: env.py
services/notification/tests/: conftest.py  test_email_channel_smtp.py  test_email_templates.py  test_mailgun_channel.py  test_mailgun_webhook.py  test_notifications_api.py
services/plagiarism/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/plagiarism/alembic/: env.py  script.py.mako
services/plagiarism/tests/: conftest.py  test_assignment_config_api.py  test_corpus.py  test_corpus_api.py  test_health.py  test_idempotency.py  test_jplag_provider.py  test_orchestrator.py  test_provider_admin_api.py  test_providers_unit.py  test_runs_api.py  test_submission_fetcher.py  test_submission_view_api.py  test_suspicious.py  test_suspicious_api.py  test_webhooks_api.py
services/reporting/: Dockerfile  README.md  alembic.ini  audit_alembic.ini  conftest.py  entrypoint.sh  pyproject.toml  reporting_alembic.ini
services/reporting-audit-notification/: Dockerfile  entrypoint.sh  notification_alembic.ini  pyproject.toml
services/reporting-audit-notification/tests/: test_app_assembly.py
services/reporting/audit_alembic/: env.py
services/reporting/notification_alembic/: env.py
services/reporting/reporting_alembic/: env.py
services/reporting/tests/: __init__.py  conftest.py  test_admin_and_cleanup.py  test_app_assembly.py  test_dashboards.py  test_google_sheets_endpoints.py
services/reporting/tests_audit/: conftest.py  test_admin_endpoints.py
services/reporting/tests_notification/: test_admin_email_config.py
services/reporting/tests_reporting/: conftest.py  test_builders.py  test_dashboards.py  test_export_formats.py  test_exports_lifecycle.py  test_health.py  test_read_models.py  test_scheduled_exports.py
services/submission/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/submission/alembic/: env.py
services/submission/tests/: conftest.py  test_feedback.py  test_grading.py  test_self_service.py
tools/: pyproject.toml
tools/e2e/: README.md  conftest.py  pytest.ini  test_seed_demo.py  test_smoke.py
tools/scripts/: autosync.py  bootstrap-admin.py  bootstrap-super-admin.py  create-tenant.py  create-test-data.py  gen-jwt-keys.sh  gen_architecture_pdf.py  health-check.py  seed-demo-data.py  seed-providers.py  seed_one_student.py  seed_real_kn_cpp.py  seed_real_kn_cpp_course.py
(+1758 files in other folders)
