[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plaglens-ai-analysis-service"
version = "0.1.0"
description = "PlagLens AI Analysis Service: LLM-driven code review with multi-provider support, prompt versioning, budgets and cache"
requires-python = ">=3.12"
authors = [{ name = "PlagLens Team" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "plaglens-common>=0.1.0",
    # Upper caps aligned with the rest of the workspace (drift prevention).
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.29,<0.40",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0.29,<3.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "aiokafka>=0.10,<0.13",
    "structlog>=24.1,<26.0",
    "httpx>=0.27,<0.30",
    # crypto extra is required — this service verifies RS256 JWTs at runtime.
    "pyjwt[crypto]>=2.8,<3.0",
    "prometheus-client>=0.20,<0.22",
    "openai>=1.30",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]
tokenizer = [
    "tiktoken>=0.7",
]
crypto = [
    "cryptography>=42.0",
    "pyjwt[crypto]>=2.8,<3.0",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "fakeredis>=2.23",
    "respx>=0.22,<1.0",
    "ruff>=0.4",
]

[project.scripts]
ai-analysis-service = "ai_analysis_service.main:run"

[tool.uv.sources]
plaglens-common = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "E501",
    "B008",
    "S101",
    "S105",
    "S106",
    "S107",
    "S108",
    "S311",
    "B904",
    "UP040",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]
"alembic/*" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
