[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaglens-course-submission-service"
version = "0.1.0"
description = "PlagLens merged Course+Submission service (one Postgres DB, two schemas; shared engine + in-process course client)"
requires-python = ">=3.12"
dependencies = [
    "plaglens-common>=0.1.0",
    # Web + ASGI
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.40",
    "pydantic[email]>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    # ORM + drivers + migrations
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.29,<0.31",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.13,<2.0",
    # Infra clients
    "redis>=5.0,<6.0",
    "aiokafka>=0.11,<0.13",
    "minio>=7.2,<8.0",
    # HTTP + auth
    "httpx>=0.27,<0.30",
    "pyjwt[crypto]>=2.8,<3.0",
    "cryptography>=42.0,<46.0",
    # Submission-side uploads
    "python-multipart>=0.0.9,<0.1.0",
    # Logging / metrics / JSON
    "structlog>=24.1,<26.0",
    "prometheus-client>=0.20,<0.22",
    "orjson>=3.10,<4.0",
    # Slug generation (course-side):
    # deep-translator does RU→EN via the free Google endpoint (no API key,
    # no ML models — just an HTTP wrapper); python-slugify normalises the
    # result to [a-z0-9-] and is the offline fallback when translation fails.
    "deep-translator>=1.11,<2.0",
    "python-slugify>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<0.30",
    "aiosqlite>=0.20,<0.22",
    "ruff>=0.4,<0.10",
    "mypy>=1.10,<2.0",
]

[tool.uv.sources]
plaglens-common = { workspace = true }

[tool.hatch.build.targets.wheel]
# Pack THREE Python packages into one wheel: the umbrella that wires Kafka /
# Redis / lifespan and mounts both router sets, plus the two source packages
# (course_service, submission_service) that hold the actual business code.
packages = [
    "src/course_submission_service",
    "src/course_service",
    "src/submission_service",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "tests_course", "tests_submission"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "E501", "B008", "B904", "B017",
    "S101", "S104", "S105", "S106", "S107", "S108", "S110", "S112", "S311",
    "RUF001", "RUF002", "RUF003", "RUF012",
    "ASYNC109", "ASYNC110", "ASYNC230",
]

[tool.ruff.lint.per-file-ignores]
"tests/*"             = ["S", "B"]
"tests_course/*"      = ["S", "B"]
"tests_submission/*"  = ["S", "B", "ASYNC"]
"course_alembic/*"    = ["S"]
"submission_alembic/*" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tests_course", "tests_submission"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["src"]
