[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaglens-course-service"
version = "0.1.0"
description = "PlagLens Course Service: courses, members, groups, assignments, deadlines"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "PlagLens Team" }]

dependencies = [
    "plaglens-common>=0.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "redis>=5.0",
    "aiokafka>=0.11",
    "structlog>=24.1",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "orjson>=3.10",
    "prometheus-client>=0.20",
    # Slug generation: deep-translator does the RU→EN translation (free
    # Google endpoint, no API key, no ML models — just an HTTP wrapper),
    # python-slugify normalises the result to a clean [a-z0-9-] slug and
    # is also the offline fallback when translation is unreachable.
    "deep-translator>=1.11,<2.0",
    "python-slugify>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "aiosqlite>=0.20",
]

[tool.uv.sources]
plaglens-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/course_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["B008", "RUF012", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
pythonpath = ["src"]
