[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaglens-course-service"
version = "0.1.0"
description = "PlagLens Course Service: courses, members, groups, assignments, deadlines"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "PlagLens Team" }]

dependencies = [
    "plaglens-common>=0.1.0",
    # Upper caps aligned with the rest of the workspace (drift prevention).
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.40",
    "pydantic[email]>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.29,<0.31",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "aiokafka>=0.11,<0.13",
    "structlog>=24.1,<26.0",
    "httpx>=0.27,<0.30",
    "python-jose[cryptography]>=3.3,<4.0",
    "orjson>=3.10,<4.0",
    "prometheus-client>=0.20,<0.22",
    # Slug generation: deep-translator does the RU→EN translation (free
    # Google endpoint, no API key, no ML models — just an HTTP wrapper),
    # python-slugify normalises the result to a clean [a-z0-9-] slug and
    # is also the offline fallback when translation is unreachable.
    "deep-translator>=1.11,<2.0",
    "python-slugify>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "aiosqlite>=0.20",
]

[tool.uv.sources]
plaglens-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/course_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["B008", "RUF012", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
pythonpath = ["src"]
