[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plaglens-gateway-service"
version = "1.0.0"
description = "PlagLens API Gateway: routing, auth, rate-limit, CORS, observability"
requires-python = ">=3.12"
authors = [{ name = "PlagLens Team" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "plaglens-common>=0.1.0",
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.29,<0.40",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "redis>=5.0,<6.0",
    "structlog>=24.1,<26.0",
    "httpx>=0.27,<0.30",
    "pyjwt[crypto]>=2.8,<3.0",
    "cryptography>=42.0,<46.0",
    "prometheus-client>=0.20,<0.22",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<0.30",
    "respx>=0.22,<1.0",
    "fakeredis>=2.23,<3.0",
    "ruff>=0.4,<0.10",
    "mypy>=1.10,<2.0",
]

[project.scripts]
gateway-service = "gateway_service.main:run"

[tool.uv.sources]
plaglens-common = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gateway_service" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "E501",
    "B008",
    "S101",
    "S105",
    "S106",
    "S107",
    "S108",
    "S104",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
