[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plaglens-identity-service"
version = "0.1.0"
description = "PlagLens Identity Service: auth, users, tenants, RBAC, OAuth, 2FA"
requires-python = ">=3.12"
authors = [{ name = "PlagLens Team" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "plaglens-common>=0.1.0",
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.29,<0.40",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0.29,<3.0",
    "asyncpg>=0.29,<0.31",
    "psycopg2-binary>=2.9",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "aiokafka>=0.10,<0.13",
    "structlog>=24.1,<26.0",
    "httpx>=0.27,<0.30",
    "argon2-cffi>=23.1,<25.0",
    "pyjwt[crypto]>=2.8,<3.0",
    "authlib>=1.3,<2.0",
    "pyotp>=2.9,<3.0",
    "cryptography>=42.0,<46.0",
    "python-multipart>=0.0.9,<0.1.0",
    "email-validator>=2.1,<3.0",
    "prometheus-client>=0.20,<0.22",
    # Slug generation — see course service pyproject for the rationale.
    "deep-translator>=1.11,<2.0",
    "python-slugify>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<0.30",
    "aiosqlite>=0.20,<0.22",
    "ruff>=0.4,<0.10",
    "mypy>=1.10,<2.0",
]

[project.scripts]
identity-service = "identity_service.main:run"

[tool.uv.sources]
plaglens-common = { path = "../../libs/plaglens-common", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"identity_service" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # FastAPI uses Depends() in defaults
    "S101",  # asserts in tests
    "S105",  # hardcoded password (we have placeholders)
    "S106",
    "S107",
    "S108",
    "UP007",  # `Optional[X]` vs `X | None` — both styles accepted
    "UP017",  # datetime.UTC alias (we keep `timezone.utc` for older Python compat)
    "UP045",  # `X | None` vs Optional[X] — both are accepted in this codebase
    "UP035",  # `typing.X` deprecation (Iterable etc.) — too noisy in v2 codebase
    "UP006",  # `List` etc. — same rationale
    "UP046",  # Generic[T] vs PEP 695 type params — keep PEP 484 style for Pydantic compat
    "B904",  # raise from inside except — preserved style varies
    "S110",  # try/except/pass — used intentionally for best-effort Redis/Kafka calls
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]
"alembic/*" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
