[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plaglens-integration-service"
version = "0.1.0"
description = "PlagLens Integration Service: Stepik / Yandex.Contest / Manual / Telegram / Google Sheets adapters, OAuth, webhooks, scheduled imports"
requires-python = ">=3.12"
authors = [{ name = "PlagLens Team" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "plaglens-common>=0.1.0",
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.29,<0.40",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0.29,<3.0",
    "asyncpg>=0.29,<0.31",
    "psycopg2-binary>=2.9",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "aiokafka>=0.10,<0.13",
    "structlog>=24.1,<26.0",
    "httpx>=0.27,<0.30",
    "authlib>=1.3,<2.0",
    "aiogram>=3.4,<4.0",
    "google-api-python-client>=2.120,<3.0",
    "google-auth>=2.28,<3.0",
    "google-auth-httplib2>=0.2,<1.0",
    "celery>=5.3,<6.0",
    "celery-redbeat>=2.2,<3.0",
    "apscheduler>=3.10,<4.0",
    "python-multipart>=0.0.9,<0.1.0",
    "prometheus-client>=0.20,<0.22",
    "cryptography>=42.0,<46.0",
    "pyjwt[crypto]>=2.8,<3.0",
    "croniter>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<0.30",
    "aiosqlite>=0.20,<0.22",
    "ruff>=0.4,<0.10",
    "respx>=0.22,<1.0",
]

[project.scripts]
integration-service = "integration_service.main:run"

[tool.uv.sources]
plaglens-common = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"integration_service" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = [
    "E501",
    "B008",
    "SIM105",
    "SIM108",
    "UP007",
    "UP045",
    "UP035",
    "UP006",
    "C401",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
"alembic/*" = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
