[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plaglens-reporting-service"
version = "0.1.0"
description = "PlagLens Reporting Service: exports (CSV/XLSX/JSON/PDF/Sheets), dashboards, read-models"
requires-python = ">=3.12"
authors = [{ name = "PlagLens Team" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "plaglens-common>=0.1.0",
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.29,<0.40",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0.29,<3.0",
    "asyncpg>=0.29,<0.31",
    "psycopg2-binary>=2.9",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "aiokafka>=0.10,<0.13",
    "structlog>=24.1,<26.0",
    "httpx>=0.27,<0.30",
    "minio>=7.2,<8.0",
    "apscheduler>=3.10,<4.0",
    "openpyxl>=3.1,<4.0",
    "pyjwt[crypto]>=2.8,<3.0",
    "cryptography>=42.0,<46.0",
    "python-multipart>=0.0.9,<0.1.0",
    "prometheus-client>=0.20,<0.22",
    "reportlab>=4.0,<5.0",
    "google-api-python-client>=2.100,<3.0",
    "google-auth>=2.20,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<0.30",
    "aiosqlite>=0.20,<0.22",
    "fakeredis>=2.20,<3.0",
    "ruff>=0.4,<0.10",
]
weasyprint = ["weasyprint>=60.0,<70.0"]

[project.scripts]
reporting-service = "reporting_service.main:run"

[tool.uv.sources]
plaglens-common = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"reporting_service" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "E501", "B008", "S101", "S104", "S105", "S106", "S107", "S108", "S110",
    "S112", "S311", "S603", "S607", "B904", "UP007", "UP038", "UP045", "UP035",
    "ASYNC230", "ASYNC110", "ASYNC109", "B017",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]
"alembic/*" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
