[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaglens-reporting-service"
version = "0.1.0"
description = "PlagLens Reporting Service (merged: exports + dashboards + read-models + append-only audit + delivery to in-app/email/Telegram)"
requires-python = ">=3.12"
dependencies = [
    "plaglens-common>=0.1.0",
    # Web + ASGI
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.30,<0.40",
    "pydantic[email]>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    # ORM + drivers + migrations
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.29,<0.31",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.13,<2.0",
    # Infra clients
    "redis>=5.0,<6.0",
    "aiokafka>=0.11,<0.13",
    "minio>=7.2,<8.0",
    "apscheduler>=3.10,<4.0",
    # HTTP + auth
    "httpx>=0.27,<0.30",
    "pyjwt[crypto]>=2.8,<3.0",
    "cryptography>=42.0,<46.0",
    "python-multipart>=0.0.9,<0.1.0",
    # Logging / metrics
    "structlog>=24.1,<26.0",
    "prometheus-client>=0.20,<0.22",
    # Reporting-specific: exports + Google Sheets
    "openpyxl>=3.1,<4.0",
    "reportlab>=4.0,<5.0",
    "google-api-python-client>=2.100,<3.0",
    "google-auth>=2.20,<3.0",
    # Audit-specific
    "python-ulid>=2.2,<4.0",
    # Notification-specific: SMTP, templates, Telegram, SSE
    "aiosmtplib>=3.0,<4.0",
    "sse-starlette>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "aiogram>=3.4,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<0.30",
    "aiosqlite>=0.20,<0.22",
    "fakeredis>=2.20,<3.0",
    "respx>=0.22,<1.0",
    "ruff>=0.4,<0.10",
    "mypy>=1.10,<2.0",
]
weasyprint = ["weasyprint>=60.0,<70.0"]

[tool.uv.sources]
plaglens-common = { workspace = true }

[tool.hatch.build.targets.wheel]
# One wheel ships the umbrella that wires three lifespans together plus the
# three source packages (each keeps its own schema, ORM and Kafka consumer
# group; reporting<->audit talk over loopback HTTP).
packages = [
    "src/reporting_app",
    "src/reporting_service",
    "src/audit_service",
    "src/notification_service",
]
# ``templates/`` ships via force-include below. Exclude it from the package
# glob so the files aren't added twice — newer hatchling aborts the wheel
# build on the duplicate (e.g. ``templates/__init__.py``) instead of
# silently de-duping like older releases did.
exclude = ["src/notification_service/templates/**"]

[tool.hatch.build.targets.wheel.force-include]
"src/notification_service/templates" = "notification_service/templates"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "tests_reporting", "tests_audit", "tests_notification"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "E501", "B008", "B904", "B017",
    "S101", "S104", "S105", "S106", "S107", "S108", "S110", "S112", "S311",
    "S324", "S603", "S607",
    "UP007", "UP038", "UP045", "UP035",
    "ASYNC109", "ASYNC110", "ASYNC230",
]

[tool.ruff.lint.per-file-ignores]
"tests/*"               = ["S", "B"]
"tests_reporting/*"     = ["S", "B"]
"tests_audit/*"         = ["B"]
"tests_notification/*"  = ["S", "B", "ASYNC"]
"reporting_alembic/*"   = ["S"]
"audit_alembic/*"       = []
"notification_alembic/*" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tests_reporting", "tests_audit", "tests_notification"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["src"]
